Add liveness test